pil2-proofman/pil2-stark/src/api/starks_api.hpp

    void verify_global_constraints(char *globalInfoFile, void *globalBin, void *publics, void *challenges, void *proofValues, void **airgroupValues, void *globalConstraintsInfo);
    uint64_t get_hint_field_global_constraints_values(void *p_globalinfo_bin, uint64_t hintId, char *hintFieldName);
    void get_hint_field_global_constraints_sizes(char *globalInfoFile, void *p_globalinfo_bin, void *hintFieldValues, uint64_t hintId, char *hintFieldName, bool print_expression);
    void get_hint_field_global_constraints(char *globalInfoFile, void *p_globalinfo_bin, void *hintFieldValues, void *publics, void *challenges, void *proofValues, void **airgroupValues, uint64_t hintId, char *hintFieldName, bool print_expression);
    uint64_t set_hint_field_global_constraints(char *globalInfoFile, void *p_globalinfo_bin, void *proofValues, void *values, uint64_t hintId, char *hintFieldName);
    // Gen proof && Recursive Proof
    // =================================================================================
    uint64_t gen_proof(void *pSetupCtx, uint64_t airgroupId, uint64_t airId, uint64_t instanceId, void *params, void *globalChallenge, uint64_t* proofBuffer, char *proofFile, void *d_buffers, bool skipRecalculation, uint64_t streamId, char *constPolsPath,  char *constTreePath);
    uint64_t gen_recursive_proof(void *pSetupCtx, uint64_t airgroupId, uint64_t airId, uint64_t instanceId, void* witness, void* aux_trace, void *pConstPols, void *pConstTree, void* pPublicInputs, uint64_t* proofBuffer, char *proof_file, bool vadcop, void *d_buffers, char *constPolsPath, char *constTreePath, char *proofType, bool force_recursive_stream);
    void read_exec_file(uint64_t *exec_data, char *exec_file, uint64_t nCommitedPols);
    void get_committed_pols(void *circomWitness, uint64_t* execData, void *witness, void* pPublics, uint64_t sizeWitness, uint64_t N, uint64_t nPublics, uint64_t nCols);
    void *gen_recursive_proof_final(void *pSetupCtx, uint64_t airgroupId, uint64_t airId, uint64_t instanceId, void* witness, void* aux_trace, void *pConstPols, void *pConstTree, void* pPublicInputs, char* proof_file, uint64_t proverBufferSize, void* d_buffers);
    void get_stream_proofs(void *d_buffers_);
    void get_stream_proofs_non_blocking(void *d_buffers_);
    void get_stream_id_proof(void *d_buffers_, uint64_t streamId);
    uint32_t direct_registered_h2d_done(void *d_buffers_, uint64_t streamId);
    void add_publics_aggregation(void *pProof, uint64_t offset, void *pPublics, uint64_t nPublicsAggregation);
    // Final proof
    // =================================================================================

    uint64_t get_snark_protocol_id(void* snark_prover);
    void *init_final_snark_prover(char* zkeyFile);
    void free_final_snark_prover(void *snark_prover);
    void gen_final_snark_proof(void *snark_prover, void *circomWitnessFinal, uint8_t* proof, uint8_t* publicsSnark);
    void pre_allocate_final_snark_prover(void *snark_prover, void* unified_buffer_gpu);
    void free_json_string(char* json_str);
    void snark_proof_bytes_to_json(uint8_t* proof_bytes,uint64_t proof_size,uint8_t* public_bytes,uint64_t public_size,int protocol_id,char** proof_json_out,char** publics_json_out);
    // Util calls
    // =================================================================================
    void setLogLevel(uint64_t level);
    // Stark Verify
    // =================================================================================
    bool stark_verify(uint64_t *jProof, void *pStarkInfo, void *pExpressionsBin, char *verkey, void *pPublics, void *pProofValues, void *challenges);
    bool stark_verify_bn128(void *jProof, void *pStarkInfo, void *pExpressionsBin, char *verkey, void *pPublics);
    bool stark_verify_from_file(char *proof, void *pStarkInfo, void *pExpressionsBin, char *verkey, void *pPublics, void *pProofValues, void *challenges);
    // Fixed cols
    // =================================================================================
    void write_fixed_cols_bin(char *binFile, char *airgroupName, char *airName, uint64_t N, uint64_t nFixedPols, void *fixedPolsInfo);
    // OMP
    // =================================================================================
    uint64_t get_omp_max_threads();
    void set_omp_num_threads(uint64_t num_threads);
    
    // GPU calls
    // =================================================================================
    void *gen_device_buffers(uint32_t node_rank, uint32_t node_size, const int32_t* numa_nodes, uint32_t arity, uint32_t max_n_bits_ext);
    void free_device_buffers(void *d_buffers);
    void *gen_device_buffers_recursivef(void *pSetupCtx_, uint64_t proverBufferSize, void *d_commit_buffers, char* verkey);
    void free_device_buffers_recursivef(void *d_buffers);
    void load_device_const_pols(uint64_t airgroupId, uint64_t airId, uint64_t initial_offset, void *d_buffers, char *constFilename, uint64_t constSize, char *constTreeFilename, uint64_t constTreeSize, char* proofType, bool onlyFirstGPU);
    void load_device_setup(uint64_t airgroupId, uint64_t airId, char *proofType, void *pSetupCtx_, void *d_buffers_, void *verkeyRoot_,  void *packedInfo);
    uint64_t gen_device_streams(void *d_buffers_, uint64_t n_streams, uint64_t n_recursive_streams, uint64_t maxSizeProverBuffer, uint64_t maxSizeProverBufferAggregation, uint64_t maxProofSize, uint64_t merkleTreeArity);
    void alloc_device_large_buffers(void *d_buffers_, uint64_t auxTraceArea, uint64_t auxTraceRecursiveArea, uint64_t totalConstPols, uint64_t totalConstPolsAggregation);
    void get_instances_ready(void *d_buffers, int64_t* instances_ready);
    void reset_device_streams(void *d_buffers_);
    uint64_t check_device_memory(uint32_t node_rank, uint32_t node_size);
    uint64_t get_num_gpus();
    void *get_unified_buffer_gpu(void *d_buffers_);
    void alloc_fixed_pols_buffer_gpu(void *d_buffers_);
    void free_fixed_pols_buffer_gpu(void *d_buffers_);
    void load_fixed_pols_recursivef(void *pSetupCtx_, void *pConstTree, void *d_buffers_);
    
    typedef void (*ProofDoneCallback)(uint64_t instanceId, const char* proofType);
    
    void register_proof_done_callback(ProofDoneCallback cb);
    void launch_callback(uint64_t instanceId, char *proofType);
    // MPI calls
    // =================================================================================
    void initialize_agg_readiness_tracker();
    void free_agg_readiness_tracker();
    int  agg_is_ready();
    void reset_agg_readiness_tracker();