pil2-proofman/provers/starks-lib-c/bindings_starks.rs

    
    pub fn verify_global_constraints(
        globalInfoFile: *mut ::std::os::raw::c_char,
        globalBin: *mut ::std::os::raw::c_void,
        publics: *mut ::std::os::raw::c_void,
        challenges: *mut ::std::os::raw::c_void,
        proofValues: *mut ::std::os::raw::c_void,
        airgroupValues: *mut *mut ::std::os::raw::c_void,
        globalConstraintsInfo: *mut ::std::os::raw::c_void,
    );
    
    pub fn get_hint_field_global_constraints_values(
        p_globalinfo_bin: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
    ) -> u64;
    
    pub fn get_hint_field_global_constraints_sizes(
        globalInfoFile: *mut ::std::os::raw::c_char,
        p_globalinfo_bin: *mut ::std::os::raw::c_void,
        hintFieldValues: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
        print_expression: bool,
    );
    
    pub fn get_hint_field_global_constraints(
        globalInfoFile: *mut ::std::os::raw::c_char,
        p_globalinfo_bin: *mut ::std::os::raw::c_void,
        hintFieldValues: *mut ::std::os::raw::c_void,
        publics: *mut ::std::os::raw::c_void,
        challenges: *mut ::std::os::raw::c_void,
        proofValues: *mut ::std::os::raw::c_void,
        airgroupValues: *mut *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
        print_expression: bool,
    );
    
    pub fn set_hint_field_global_constraints(
        globalInfoFile: *mut ::std::os::raw::c_char,
        p_globalinfo_bin: *mut ::std::os::raw::c_void,
        proofValues: *mut ::std::os::raw::c_void,
        values: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
    ) -> u64;

    // Proof Generation
    // ========================================================================================
    pub fn gen_proof(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        instanceId: u64,
        params: *mut ::std::os::raw::c_void,
        globalChallenge: *mut ::std::os::raw::c_void,
        proofBuffer: *mut u64,
        proofFile: *mut ::std::os::raw::c_char,
        d_buffers: *mut ::std::os::raw::c_void,
        skipRecalculation: bool,
        streamId: u64,
        constPolsPath: *mut ::std::os::raw::c_char,
        constTreePath: *mut ::std::os::raw::c_char,
    ) -> u64;
    
    pub fn gen_recursive_proof(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        instanceId: u64,
        witness: *mut ::std::os::raw::c_void,
        aux_trace: *mut ::std::os::raw::c_void,
        pConstPols: *mut ::std::os::raw::c_void,
        pConstTree: *mut ::std::os::raw::c_void,
        pPublicInputs: *mut ::std::os::raw::c_void,
        proofBuffer: *mut u64,
        proof_file: *mut ::std::os::raw::c_char,
        vadcop: bool,
        d_buffers: *mut ::std::os::raw::c_void,
        constPolsPath: *mut ::std::os::raw::c_char,
        constTreePath: *mut ::std::os::raw::c_char,
        proofType: *mut ::std::os::raw::c_char,
        force_recursive_stream: bool,
    ) -> u64;
    
    pub fn read_exec_file(exec_data: *mut u64, exec_file: *mut ::std::os::raw::c_char, nCommitedPols: u64);
    
    pub fn get_committed_pols(
        circomWitness: *mut ::std::os::raw::c_void,
        execData: *mut u64,
        witness: *mut ::std::os::raw::c_void,
        pPublics: *mut ::std::os::raw::c_void,
        sizeWitness: u64,
        N: u64,
        nPublics: u64,
        nCols: u64,
    );
    
    pub fn gen_recursive_proof_final(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        instanceId: u64,
        witness: *mut ::std::os::raw::c_void,
        aux_trace: *mut ::std::os::raw::c_void,
        pConstPols: *mut ::std::os::raw::c_void,
        pConstTree: *mut ::std::os::raw::c_void,
        pPublicInputs: *mut ::std::os::raw::c_void,
        proof_file: *mut ::std::os::raw::c_char,
        prover_buffer_size: u64,
        d_buffers: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    // Stream Management
    // ========================================================================================
    pub fn get_stream_proofs(d_buffers_: *mut ::std::os::raw::c_void);
    
    pub fn get_stream_proofs_non_blocking(d_buffers_: *mut ::std::os::raw::c_void);
    
    pub fn get_stream_id_proof(d_buffers_: *mut ::std::os::raw::c_void, streamId: u64);

    pub fn direct_registered_h2d_done(d_buffers_: *mut ::std::os::raw::c_void, streamId: u64) -> u32;

    // Aggregation
    // ========================================================================================
    pub fn add_publics_aggregation(
        pProof: *mut ::std::os::raw::c_void,
        offset: u64,
        pPublics: *mut ::std::os::raw::c_void,
        nPublicsAggregation: u64,
    );
    
    // Final proof
    // ========================================================================================

    pub fn init_final_snark_prover(zkeyFile: *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_void;

    pub fn get_snark_protocol_id(prover: *mut ::std::os::raw::c_void) -> u64;

    pub fn free_final_snark_prover(prover: *mut ::std::os::raw::c_void);

    pub fn gen_final_snark_proof(
        proverSnark: *mut ::std::os::raw::c_void,
        circomWitnessFinal: *mut ::std::os::raw::c_void,
        proof: *mut u8,
        publicsSnark: *mut u8,
    );

    pub fn pre_allocate_final_snark_prover(prover: *mut ::std::os::raw::c_void, unified_buffer_gpu: *mut ::std::os::raw::c_void);

    pub fn free_json_string(json_str: *mut ::std::os::raw::c_char);

    pub fn snark_proof_bytes_to_json(
        proof_bytes: *const u8,
        proof_size: u64,
        public_bytes: *const u8,
        public_size: u64,
        protocol_id: ::std::os::raw::c_int,
        proof_json_out: *mut *mut ::std::os::raw::c_char,
        publics_json_out: *mut *mut ::std::os::raw::c_char,
    );

    // Utilities
    // ========================================================================================
    pub fn setLogLevel(level: u64);

    // Verification
    // ========================================================================================
    pub fn stark_verify(
        jProof: *mut u64,
        pStarkInfo: *mut ::std::os::raw::c_void,
        pExpressionsBin: *mut ::std::os::raw::c_void,
        verkey: *mut ::std::os::raw::c_char,
        pPublics: *mut ::std::os::raw::c_void,
        pProofValues: *mut ::std::os::raw::c_void,
        challenges: *mut ::std::os::raw::c_void,
    ) -> bool;
    
    pub fn stark_verify_bn128(
        jProof: *mut ::std::os::raw::c_void,
        pStarkInfo: *mut ::std::os::raw::c_void,
        pExpressionsBin: *mut ::std::os::raw::c_void,
        verkey: *mut ::std::os::raw::c_char,
        pPublics: *mut ::std::os::raw::c_void,
    ) -> bool;
    
    pub fn stark_verify_from_file(
        proof: *mut ::std::os::raw::c_char,
        pStarkInfo: *mut ::std::os::raw::c_void,
        pExpressionsBin: *mut ::std::os::raw::c_void,
        verkey: *mut ::std::os::raw::c_char,
        pPublics: *mut ::std::os::raw::c_void,
        pProofValues: *mut ::std::os::raw::c_void,
        challenges: *mut ::std::os::raw::c_void,
    ) -> bool;

    // Fixed Columns
    // ========================================================================================
    pub fn write_fixed_cols_bin(
        binFile: *mut ::std::os::raw::c_char,
        airgroupName: *mut ::std::os::raw::c_char,
        airName: *mut ::std::os::raw::c_char,
        N: u64,
        nFixedPols: u64,
        fixedPolsInfo: *mut ::std::os::raw::c_void,
    );

    // OpenMP
    // ========================================================================================
    pub fn get_omp_max_threads() -> u64;
    
    pub fn set_omp_num_threads(num_threads: u64);

    // GPU/Device Management
    // ========================================================================================
    pub fn gen_device_buffers(
        node_rank: u32,
        node_size: u32,
        numa_nodes: *const i32,
        arity: u32,
        max_n_bits_ext: u32,
    ) -> *mut ::std::os::raw::c_void;

    pub fn gen_device_buffers_recursivef(
        pSetupCtx_: *mut ::std::os::raw::c_void,
        proverBufferSize: u64,
        d_commit_buffers: *mut ::std::os::raw::c_void,
        verkey: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;

    pub fn free_device_buffers_recursivef(d_buffers: *mut ::std::os::raw::c_void);
    
    pub fn free_device_buffers(d_buffers: *mut ::std::os::raw::c_void);
    
    pub fn load_device_const_pols(
        airgroupId: u64,
        airId: u64,
        initial_offset: u64,
        d_buffers: *mut ::std::os::raw::c_void,
        constFilename: *mut ::std::os::raw::c_char,
        constSize: u64,
        constTreeFilename: *mut ::std::os::raw::c_char,
        constTreeSize: u64,
        proofType: *mut ::std::os::raw::c_char,
        onlyFirstGPU: bool,
    );
    
    pub fn load_device_setup(
        airgroupId: u64,
        airId: u64,
        proofType: *mut ::std::os::raw::c_char,
        pSetupCtx_: *mut ::std::os::raw::c_void,
        d_buffers_: *mut ::std::os::raw::c_void,
        verkeyRoot_: *mut ::std::os::raw::c_void,
        packedInfo_: *mut ::std::os::raw::c_void,
    );
    
    pub fn gen_device_streams(
        d_buffers_: *mut ::std::os::raw::c_void,
        nStreams: u64,
        nStreamsRecursive: u64,
        maxSizeProverBuffer: u64,
        maxSizeProverBufferAggregation: u64,
        maxProofSize: u64,
        merkle_tree_arity: u64,
    ) -> u64;

    pub fn alloc_device_large_buffers(
        d_buffers_: *mut ::std::os::raw::c_void,
        auxTraceArea: u64,
        auxTraceRecursiveArea: u64,
        totalConstPols: u64,
        totalConstPolsAggregation: u64,
    );   
    
    pub fn get_instances_ready(
        d_buffers_: *mut ::std::os::raw::c_void,
        instances_ready: *mut i64,
    );

    pub fn reset_device_streams(
        d_buffers_: *mut ::std::os::raw::c_void,
    );
    
    pub fn check_device_memory(
        node_rank: u32,
        node_size: u32,
    ) -> u64;
    
    pub fn get_num_gpus() -> u64;

    pub fn get_unified_buffer_gpu(d_buffers: *mut ::std::os::raw::c_void) -> *mut ::std::os::raw::c_void;

    pub fn alloc_fixed_pols_buffer_gpu(d_buffers: *mut ::std::os::raw::c_void);
    pub fn free_fixed_pols_buffer_gpu(d_buffers: *mut ::std::os::raw::c_void);
    pub fn load_fixed_pols_recursivef(pSetupCtx: *mut ::std::os::raw::c_void, pConstTree: *mut ::std::os::raw::c_void, d_buffers: *mut ::std::os::raw::c_void);

    // Callback Management
    // ========================================================================================
    pub fn register_proof_done_callback(cb: ProofDoneCallback);
    
    pub fn launch_callback(instanceId: u64, proofType: *mut ::std::os::raw::c_char);

    // MPI calls
    // ========================================================================================
    pub fn initialize_agg_readiness_tracker();
    pub fn free_agg_readiness_tracker();
    pub fn agg_is_ready() -> i32;
    pub fn reset_agg_readiness_tracker();
}

// Type definitions
pub type ProofDoneCallback =
    ::std::option::Option<unsafe extern "C" fn(instanceId: u64, proofType: *const ::std::os::raw::c_char)>;
